A little bit of cleanup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <string name="scheme">https</string>
     <string name="host">stratechery.com</string>
+
+    <string name="url_github_repo">https://github.com/lolsheeplol/StratecheryRssApp</string>
 </resources>
